fix: corrigir o estilo do section small

--- a/src/app/components/setion-small-card-list/setion-small-card-list.component.css
+++ b/src/app/components/setion-small-card-list/setion-small-card-list.component.css
@@ -14,6 +14,7 @@
 
   align-items: center;
   margin: 0px 30px;
+  padding: 30px 0px;
 }
 
 .section-smal-card-list .content {
